# dialogflow-cpp-client

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apiai/: AI.cpp  AI.h  CMakeLists.txt  Credentials.cpp  Credentials.h  Exception.cpp  Exception.h  Service.cpp  main.cpp
apiai/JSON/: CMakeLists.txt  JSONException.cpp  JSONException.h
apiai/http/: CMakeLists.txt  HTTPrequest.cpp  HTTPrequest.h  Request.cpp  Request.h  serialization.h
apiai/include/apiai/: AI.h  Credentials.h  Service.h  Types.h
apiai/include/apiai/common/: Deprecated.h
apiai/include/apiai/exceptions/: Exception.h  InvalidArgumentException.h  JSONException.h  Noexcept.h  ResponseErrorException.cpp  ResponseErrorException.h
apiai/include/apiai/http/: HTTPrequest.h  Request.h  RequestConnection.h  RequestSerialize.h
apiai/include/apiai/query/: QueryRequest.h  TextQueryRequest.h  VoiceFileRequest.h  VoiceRequest.h
apiai/include/apiai/query/request/: Entity.h  Parameters.h  QueryText.h  RequestContext.h
apiai/include/apiai/query/response/: Context.h  Element.h  Fulfillment.h  Metadata.h  Response.h  Result.h
apiai/include/apiai/vad/: VADState.h  VoiceActivityDetector.h
apiai/indent_stream/: CMakeLists.txt  indent_stream.h
apiai/io/: Stream.cpp  Stream.h  StreamReader.cpp  StreamReader.h  StreamThreadSafetyCheck.cpp  StreamThreadSafetyCheck.h  StreamWriter.cpp  StreamWriter.h  ThreadSafetyCheck.cpp  ThreadSafetyCheck.h
apiai/io/tests/: StreamThreadSafetyCheck.cpp  StreamThreadSafetyCheck.h
apiai/query/: CMakeLists.txt  Context.cpp  Context.h  ContextParametersSerializer.cpp  ContextParametersSerializer.h  Query.cpp  Query.h  QueryRequest.cpp  QueryRequest.h  TextQueryRequest.cpp  TextQueryRequest.h  VoiceFileRequest.cpp  cJSONUtils.cpp  cJSONUtils.h
apiai/query/request/: Entity.cpp  Entity.h  Parameters.cpp  Parameters.h  QueryText.cpp  QueryText.h  QueryTextSerialize.cpp  QueryTextVisitor.cpp  RequestContext.cpp
apiai/query/response/: Context.cpp  Context.h  Fulfillment.cpp  Fulfillment.h  Metadata.cpp  Metadata.h  QueryResponse.cpp  QueryResponse.h  Response.cpp  Response.h  Result.cpp  Result.h
apiai/src/: AI.cpp  CMakeLists.txt  Credentials.cpp  Service.cpp  Types.cpp
apiai/src/exceptions/: Exception.cpp  InvalidArgumentException.cpp  JSONException.cpp  ResponseErrorException.cpp
apiai/src/http/: HTTPrequest.cpp  RequestConnection.cpp  RequestConnectionImpl.cpp  RequestConnectionImpl.h
apiai/src/io/: Stream.cpp  Stream.h  StreamReader.cpp  StreamReader.h  StreamWriter.cpp  StreamWriter.h
apiai/src/query/: ContextParametersSerializer.cpp  ContextParametersSerializer.h  QueryRequest.cpp  TextQueryRequest.cpp  VoiceFileRequest.cpp  VoiceRequest.cpp  cJSONUtils.cpp  cJSONUtils.h
apiai/src/query/request/: Entity.cpp  Parameters.cpp  QueryText.cpp  QueryTextSerialize.cpp  QueryTextSerialize.h  QueryTextVisitor.h  RequestContext.cpp
apiai/src/query/response/: Context.cpp  Element.cpp  Fulfillment.cpp  Metadata.cpp  Response.cpp  Result.cpp
apiai/src/vad/: VADContext.c  VADContext.h  VoiceActivityDetector.cpp
cmake/: FindPortaudio.cmake
examples/: CMakeLists.txt  portaudio_example.cpp  test.txt  text_request.cpp  voice_activity_detection.cpp  voice_file_request.cpp  voice_request.cpp
indent_stream/: CMakeLists.txt  indent_stream.cpp  indent_stream.h
pkg-config/: apiai.pc.in
tests/: CMakeLists.txt  StreamThreadSafetyCheck.cpp  StreamThreadSafetyCheck.h  streams_test.cpp
tests/sounds/: count-hammer.raw
